--- a/Source/kubejs/assets/quests/lang/en_us.json
+++ b/Source/kubejs/assets/quests/lang/en_us.json
@@ -6,7 +6,7 @@
   "ftbquests.chapter.escaping.quest1.title": "Portal to the Overworld",
   "ftbquests.chapter.escaping.title": "Escaping",
   "ftbquests.chapter.sector_1.quest1.description1": "You can use brushes to sweep up the carpet for carpet dust.",
-  "ftbquests.chapter.sector_1.quest1.description2": "\u0026oNote: The effects of long term carpet dust exposure are unknown.",
+  "ftbquests.chapter.sector_1.quest1.description2": "&oNote: The effects of long term carpet dust exposure are unknown.",
   "ftbquests.chapter.sector_1.quest1.subtitle": "Do not Inhale this...",
   "ftbquests.chapter.sector_1.quest1.title": "This Place could use some Sweeping",
   "ftbquests.chapter.sector_1.quest10.description1": "You can cut open the carpet using a knife, revealing some strange concrete tiles underneath.",
@@ -39,14 +39,14 @@
   "ftbquests.chapter.sector_1.quest16.description1": "You can scrape the wallpaper off the walls using any axe. This can provide the resources to make a small backpack.",
   "ftbquests.chapter.sector_1.quest16.subtitle": "We are going on an Adventure!",
   "ftbquests.chapter.sector_1.quest16.title": "Pack your bags",
-  "ftbquests.chapter.sector_1.quest17.description1": "Some parts of these rooms seem to be infected with sculk. It\u0027s probably best to stay as far away from the stuff as possible.",
+  "ftbquests.chapter.sector_1.quest17.description1": "Some parts of these rooms seem to be infected with sculk. It's probably best to stay as far away from the stuff as possible.",
   "ftbquests.chapter.sector_1.quest17.description2": "Barricading corridors to infected rooms might also prove an effective tactic.",
   "ftbquests.chapter.sector_1.quest17.description3": "Stay safe!",
   "ftbquests.chapter.sector_1.quest17.subtitle": "Turn away when you see sculk",
   "ftbquests.chapter.sector_1.quest17.task_8989984584771887628.title": "Whats the worst that could happen?",
   "ftbquests.chapter.sector_1.quest17.title": "Stay Safe",
   "ftbquests.chapter.sector_1.quest18.task_9209133315685639506.title": "I wish for knowlege",
-  "ftbquests.chapter.sector_1.quest19.description1": "If you don\u0027t feel like getting lost, then it is a good idea to make some chalk.",
+  "ftbquests.chapter.sector_1.quest19.description1": "If you don't feel like getting lost, then it is a good idea to make some chalk.",
   "ftbquests.chapter.sector_1.quest19.description2": "With Chalk you can draw arrows anywhere you want.",
   "ftbquests.chapter.sector_1.quest19.description3": "If you shift+right-click with a piece of chalk on a block, you can draw symbols that can help you remind yourself where to go and where to stay very far away from.",
   "ftbquests.chapter.sector_1.quest19.title": "Finding Your Way Back",
@@ -66,9 +66,9 @@
   "ftbquests.chapter.sector_1.quest3.description1": "Wooden tools are essential to your succes. You can use knifes to cut up the carpet, revealing the concrete tiles underneath...",
   "ftbquests.chapter.sector_1.quest3.subtitle": "The setup for succes",
   "ftbquests.chapter.sector_1.quest3.title": "Wooden Tools",
-  "ftbquests.chapter.sector_1.quest4.description1": "If you have not yet adjusted to your new liminal environment. Then don\u0027t worry, let us make our own base and make it a bit more cozy.",
+  "ftbquests.chapter.sector_1.quest4.description1": "If you have not yet adjusted to your new liminal environment. Then don't worry, let us make our own base and make it a bit more cozy.",
   "ftbquests.chapter.sector_1.quest4.description2": "The random furniture scattered across the backrooms could probably be repurposed into planks to increase your chance of survival. ",
-  "ftbquests.chapter.sector_1.quest4.description3": "Let\u0027s get started with making a crafting table. Start with crafting a chair into planks.",
+  "ftbquests.chapter.sector_1.quest4.description3": "Let's get started with making a crafting table. Start with crafting a chair into planks.",
   "ftbquests.chapter.sector_1.quest4.subtitle": "Welcome to Liminal Industries!",
   "ftbquests.chapter.sector_1.quest4.title": "Punching Chairs",
   "ftbquests.chapter.sector_1.quest5.description1": "Clay can be made by washing Carpet Dust with a Encased Fan and a Sponge.",
@@ -97,9 +97,9 @@
   "ftbquests.chapter.sector_2.quest13.description1": "The Igneous Extruder can be used to generate a lot of different items.",
   "ftbquests.chapter.sector_2.quest13.description2": "The machine must always be next to lava, other adjacent blocks will decide the output.",
   "ftbquests.chapter.sector_2.quest13.description3": "The most noteworthy for now resources are:",
-  "ftbquests.chapter.sector_2.quest13.description4": "\u0026lCobblestone\u0026r",
+  "ftbquests.chapter.sector_2.quest13.description4": "&lCobblestone&r",
   "ftbquests.chapter.sector_2.quest13.description5": "Lava and Water",
-  "ftbquests.chapter.sector_2.quest13.description6": "\u0026lGlue\u0026r",
+  "ftbquests.chapter.sector_2.quest13.description6": "&lGlue&r",
   "ftbquests.chapter.sector_2.quest13.description7": "Lava and Stripped Wallpaper",
   "ftbquests.chapter.sector_2.quest13.description8": "These recipes can also be found in JEI.",
   "ftbquests.chapter.sector_2.quest14.title": "Glue Extractor",
@@ -196,7 +196,7 @@
   "ftbquests.chapter.sector_2.quest45.title": "Renewable Lead",
   "ftbquests.chapter.sector_2.quest46.description1": "The putty knife can remove wallpaper from the walls without losing durability.",
   "ftbquests.chapter.sector_2.quest46.description2": "Now it is up to you to invent a contraption to automate this task.",
-  "ftbquests.chapter.sector_2.quest47.description1": "The Alloy Klin can\u0027t be automated but there is another way to make infinite lava using Buckets filled with Cobblestone. This is entirely optional but something to keep in mind for when you find yourself running out of fuel all the time.",
+  "ftbquests.chapter.sector_2.quest47.description1": "The Alloy Klin can't be automated but there is another way to make infinite lava using Buckets filled with Cobblestone. This is entirely optional but something to keep in mind for when you find yourself running out of fuel all the time.",
   "ftbquests.chapter.sector_2.quest47.title": "Endless Cobblestone into Endless Lava",
   "ftbquests.chapter.sector_2.quest48.subtitle": "Diamonds - The Boxer Rebellion",
   "ftbquests.chapter.sector_2.quest48.title": "Shine Bright",
@@ -211,7 +211,7 @@
   "ftbquests.chapter.sector_2.quest7.title": "Liminal Chef",
   "ftbquests.chapter.sector_2.quest8.description1": "Using bamboo, you can now make infinite wood without having to rely on your local chairs.",
   "ftbquests.chapter.sector_2.quest8.description2": "A block of bamboo can also be turned into charcoal. This should help with feeding the fuel-hungry steam engine.",
-  "ftbquests.chapter.sector_2.quest8.description3": "Remember the plant can grow on snad and that, therefore, you don\u0027t need to build a megafarm in order to obtain a moderate amount of bamboo.",
+  "ftbquests.chapter.sector_2.quest8.description3": "Remember the plant can grow on snad and that, therefore, you don't need to build a megafarm in order to obtain a moderate amount of bamboo.",
   "ftbquests.chapter.sector_2.quest8.title": "Renewable Wood",
   "ftbquests.chapter.sector_2.quest9.title": "Renewable Redstone",
   "ftbquests.chapter.sector_2.title": "Chapter 3",
@@ -296,10 +296,10 @@
   "ftbquests.chapter.sector_3.quest23.title": "Arc Furnace Prep",
   "ftbquests.chapter.sector_3.quest27.description1": "The Reality Charge acts as the power source of the Reality Frame. ",
   "ftbquests.chapter.sector_3.quest27.description2": "After the Frame is done generating, the Reality Charge will need to be empowered again, so it is a very good idea to set up a Confusing Powder farm.",
-  "ftbquests.chapter.sector_3.quest29.description1": "\u0026oAlchemy: the science of understanding, deconstructing, and reconstructing matter. However, it is not an all-powerful art. ",
-  "ftbquests.chapter.sector_3.quest29.description2": "\u0026oIt is impossible to create something out of nothing. If one wishes to obtain something, something of equal value must be given. ",
-  "ftbquests.chapter.sector_3.quest29.description3": "\u0026oThis is the law of equivalent exchange; the basis of all alchemy. In accordance to this law, there is a taboo among alchemists. Human transmutation is strictly forbidden. ",
-  "ftbquests.chapter.sector_3.quest29.description4": "\u0026oFor what could equal the value of a human soul?",
+  "ftbquests.chapter.sector_3.quest29.description1": "&oAlchemy: the science of understanding, deconstructing, and reconstructing matter. However, it is not an all-powerful art. ",
+  "ftbquests.chapter.sector_3.quest29.description2": "&oIt is impossible to create something out of nothing. If one wishes to obtain something, something of equal value must be given. ",
+  "ftbquests.chapter.sector_3.quest29.description3": "&oThis is the law of equivalent exchange; the basis of all alchemy. In accordance to this law, there is a taboo among alchemists. Human transmutation is strictly forbidden. ",
+  "ftbquests.chapter.sector_3.quest29.description4": "&oFor what could equal the value of a human soul?",
   "ftbquests.chapter.sector_3.quest29.subtitle": "Equivalent Exchange",
   "ftbquests.chapter.sector_3.quest3.description1": "The Refinery can produce Phenolic Resin using the Ethanol from the Industrial Fermenter. ",
   "ftbquests.chapter.sector_3.quest3.description2": "A silver plate is needed to catalyse the reaction. The plate will not be consumed.",
@@ -343,7 +343,7 @@
   "ftbquests.chapter.sector_3.quest43.description1": "The ME Drive can hold multiple Storage Cells and is a powerful upgrade to your storage network.",
   "ftbquests.chapter.sector_3.quest44.description1": "With confusing powder and a Crucible you can convert lead into gold.",
   "ftbquests.chapter.sector_3.quest44.description2": "The contraption needed to automate the Crucible might take some tinkering, but it is possible.",
-  "ftbquests.chapter.sector_3.quest44.subtitle": "No need for a Philosopher\u0027s Stone",
+  "ftbquests.chapter.sector_3.quest44.subtitle": "No need for a Philosopher's Stone",
   "ftbquests.chapter.sector_3.quest44.task_6553303838818538709.title": "I have build this contraption",
   "ftbquests.chapter.sector_3.quest44.title": "Renewable Gold",
   "ftbquests.chapter.sector_3.quest45.description1": "You can turn Light Oil into Refined Fuel.",
@@ -401,9 +401,9 @@
   "ftbquests.chapter.sector_4.quest38.subtitle": "Powers Beyond your Comprehension",
   "ftbquests.chapter.sector_4.quest38.title": "Dark Magic",
   "ftbquests.chapter.sector_4.quest40.title": "String Theory",
-  "ftbquests.chapter.sector_4.quest41.description1": "You can summon Dragon\u0027s Breath using the summoning brazier. You need to be quick to pick it up, so have your bottles ready.",
+  "ftbquests.chapter.sector_4.quest41.description1": "You can summon Dragon's Breath using the summoning brazier. You need to be quick to pick it up, so have your bottles ready.",
   "ftbquests.chapter.sector_4.quest41.subtitle": "Fire comes from the Breath",
-  "ftbquests.chapter.sector_4.quest41.title": "Dragon\u0027s Breath",
+  "ftbquests.chapter.sector_4.quest41.title": "Dragon's Breath",
   "ftbquests.chapter.sector_4.quest42.subtitle": "Feed the Singularity",
   "ftbquests.chapter.sector_4.quest45.description1": "The reality Frame can be used to warp in a black hole.",
   "ftbquests.chapter.sector_4.quest45.description2": "The process is the same as normal. However, the modified data chip should be used instead of a normal one to start the warping.",
