--- a/Source/kubejs/assets/kubejs/lang/en_us.json
+++ b/Source/kubejs/assets/kubejs/lang/en_us.json
@@ -124,7 +124,7 @@
     "item.kubejs.data_chip_infinity": "Modified Data Chip",
     "item.kubejs.data_chip_error": "Broken Data Chip",
 
-    "fluid.kubejs.liquid_time": "The Flow of Time"
+    "fluid.kubejs.liquid_time": "The Flow of Time",
     
     "item.kubejs.data_chip1.tooltip":"Seed: 1000",
     "item.kubejs.data_chip2.tooltip":"Seed: 0100",
@@ -144,12 +144,12 @@
     "chat.creative_mode_test":"You joined the world in creative. Click this text if you want to go to a superflat test world.",
     "chat.out_of_backrooms.0":"You tried to build a portal to ungenerated terrain.",
     "chat.out_of_backrooms.1":"Build a portal from the overworld to the nether",
-    "chat.out_of_backrooms.2":"to ensure a successful connection."
+    "chat.out_of_backrooms.2":"to ensure a successful connection.",
     
     "book.summoning.name":"Summoning 101",
     "book.summoning.desc":"This is a guide about how you summon different entities into the backrooms.",
     "book.reality_frame.name":"Building a Reality Frame",
-    "book.reality_frame.desc":"A guide in how to construct a reality frame multiblock"
+    "book.reality_frame.desc":"A guide in how to construct a reality frame multiblock",
 
     "event.sculk.rightclick": "You can't place blocks on sculk!",
     "event.sculk_scrubber.rightclick.0": "Try to place the Sculk Scrubber on the side of a non-sculk block to get it in the right position.",
@@ -158,5 +158,6 @@
     "cryptic_levelup.title": "Knowlege absorbed, feed me more...",
     "spread_furniture.success": "Successfully scattered 20 pieces of common furniture in a 300 block radius"
 }
+
 
 
