--- a/Source/kubejs/assets/kubejs/lang/en_us.json
+++ b/Source/kubejs/assets/kubejs/lang/en_us.json
@@ -123,6 +123,7 @@
     "item.kubejs.data_chip10": "Data Chip",
     "item.kubejs.data_chip_infinity": "Modified Data Chip",
     "item.kubejs.data_chip_error": "Broken Data Chip",
+    "item.kubejs.liquid_time_bucket": "The Flow of Time Bucket",
 
     "fluid.kubejs.liquid_time": "The Flow of Time",
     
@@ -158,6 +159,7 @@
     "cryptic_levelup.title": "Knowlege absorbed, feed me more...",
     "spread_furniture.success": "Successfully scattered 20 pieces of common furniture in a 300 block radius"
 }
+
 
 
 
