--- a/Source/kubejs/assets/quests/lang/en_us.json
+++ b/Source/kubejs/assets/quests/lang/en_us.json
@@ -87,14 +87,14 @@
   "ftbquests.chapter.sector_1.quest16.description1": "You can scrape the wallpaper off the walls using any axe. This can provide the resources to make a small backpack.",
   "ftbquests.chapter.sector_1.quest16.subtitle": "We are going on an Adventure!",
   "ftbquests.chapter.sector_1.quest16.title": "Pack your bags",
-  "ftbquests.chapter.sector_1.quest17.description1": "Some parts of these rooms seem to be infected with sculk. It’s probably best to stay as far away from the stuff as possible.",
+  "ftbquests.chapter.sector_1.quest17.description1": "Some parts of these rooms seem to be infected with sculk. It's probably best to stay as far away from the stuff as possible.",
   "ftbquests.chapter.sector_1.quest17.description2": "Barricading corridors to infected rooms might also prove an effective tactic.",
   "ftbquests.chapter.sector_1.quest17.description3": "Stay safe!",
   "ftbquests.chapter.sector_1.quest17.subtitle": "Turn away when you see sculk",
   "ftbquests.chapter.sector_1.quest17.task_8989984584771887628.title": "Whats the worst that could happen?",
   "ftbquests.chapter.sector_1.quest17.title": "Stay Safe",
   "ftbquests.chapter.sector_1.quest18.task_9209133315685639506.title": "I wish for knowlege",
-  "ftbquests.chapter.sector_1.quest19.description1": "If you don’t feel like getting lost, then it is a good idea to make some chalk.",
+  "ftbquests.chapter.sector_1.quest19.description1": "If you don't feel like getting lost, then it is a good idea to make some chalk.",
   "ftbquests.chapter.sector_1.quest19.description2": "With Chalk you can draw arrows anywhere you want.",
   "ftbquests.chapter.sector_1.quest19.description3": "If you shift+right-click with a piece of chalk on a block, you can draw symbols that can help you remind yourself where to go and where to stay very far away from.",
   "ftbquests.chapter.sector_1.quest19.title": "Finding Your Way Back",
@@ -114,9 +114,9 @@
   "ftbquests.chapter.sector_1.quest3.description1": "Wooden tools are essential to your succes. You can use knifes to cut up the carpet, revealing the concrete tiles underneath...",
   "ftbquests.chapter.sector_1.quest3.subtitle": "The setup for succes",
   "ftbquests.chapter.sector_1.quest3.title": "Wooden Tools",
-  "ftbquests.chapter.sector_1.quest4.description1": "If you have not yet adjusted to your new liminal environment. Then don’t worry, let us make our own base and make it a bit more cozy.",
+  "ftbquests.chapter.sector_1.quest4.description1": "If you have not yet adjusted to your new liminal environment. Then don't worry, let us make our own base and make it a bit more cozy.",
   "ftbquests.chapter.sector_1.quest4.description2": "The random furniture scattered across the backrooms could probably be repurposed into planks to increase your chance of survival. ",
-  "ftbquests.chapter.sector_1.quest4.description3": "Let’s get started with making a crafting table. Start with crafting a chair into planks.",
+  "ftbquests.chapter.sector_1.quest4.description3": "Let's get started with making a crafting table. Start with crafting a chair into planks.",
   "ftbquests.chapter.sector_1.quest4.subtitle": "Welcome to Liminal Industries!",
   "ftbquests.chapter.sector_1.quest4.title": "Punching Chairs",
   "ftbquests.chapter.sector_1.quest5.description1": "Clay can be made by washing Carpet Dust with a Encased Fan and a Sponge.",
@@ -243,7 +243,7 @@
   "ftbquests.chapter.sector_2.quest44.title": "Renewable Lead",
   "ftbquests.chapter.sector_2.quest45.description1": "The putty knife can remove wallpaper from the walls without losing durability.",
   "ftbquests.chapter.sector_2.quest45.description2": "Now it is up to you to invent a contraption to automate this task.",
-  "ftbquests.chapter.sector_2.quest46.description1": "The Alloy Klin can’t be automated but there is another way to make infinite lava using Buckets filled with Cobblestone. This is entirely optional but something to keep in mind for when you find yourself running out of fuel all the time.",
+  "ftbquests.chapter.sector_2.quest46.description1": "The Alloy Klin can't be automated but there is another way to make infinite lava using Buckets filled with Cobblestone. This is entirely optional but something to keep in mind for when you find yourself running out of fuel all the time.",
   "ftbquests.chapter.sector_2.quest46.title": "Endless Cobblestone into Endless Lava",
   "ftbquests.chapter.sector_2.quest47.subtitle": "Diamonds - The Boxer Rebellion",
   "ftbquests.chapter.sector_2.quest47.title": "Shine Bright",
@@ -261,7 +261,7 @@
   "ftbquests.chapter.sector_2.quest7.title": "Liminal Chef",
   "ftbquests.chapter.sector_2.quest8.description1": "Using bamboo, you can now make infinite wood without having to rely on your local chairs.",
   "ftbquests.chapter.sector_2.quest8.description2": "A block of bamboo can also be turned into charcoal. This should help with feeding the fuel-hungry steam engine.",
-  "ftbquests.chapter.sector_2.quest8.description3": "Remember the plant can grow on snad and that, therefore, you don’t need to build a megafarm in order to obtain a moderate amount of bamboo.",
+  "ftbquests.chapter.sector_2.quest8.description3": "Remember the plant can grow on snad and that, therefore, you don't need to build a megafarm in order to obtain a moderate amount of bamboo.",
   "ftbquests.chapter.sector_2.quest8.title": "Renewable Wood",
   "ftbquests.chapter.sector_2.quest9.title": "Renewable Redstone",
   "ftbquests.chapter.sector_2.title": "Chapter 3",
@@ -441,9 +441,9 @@
   "ftbquests.chapter.sector_4.quest38.subtitle": "Powers Beyond your Comprehension",
   "ftbquests.chapter.sector_4.quest38.title": "Dark Magic",
   "ftbquests.chapter.sector_4.quest40.title": "String Theory",
-  "ftbquests.chapter.sector_4.quest41.description1": "You can summon Dragon’s Breath using the summoning brazier. You need to be quick to pick it up, so have your bottles ready.",
+  "ftbquests.chapter.sector_4.quest41.description1": "You can summon Dragon's Breath using the summoning brazier. You need to be quick to pick it up, so have your bottles ready.",
   "ftbquests.chapter.sector_4.quest41.subtitle": "Fire comes from the Breath",
-  "ftbquests.chapter.sector_4.quest41.title": "Dragon’s Breath",
+  "ftbquests.chapter.sector_4.quest41.title": "Dragon's Breath",
   "ftbquests.chapter.sector_4.quest42.subtitle": "Feed the Singularity",
   "ftbquests.chapter.sector_4.quest45.description1": "The reality Frame can be used to warp in a black hole.",
   "ftbquests.chapter.sector_4.quest45.description2": "The process is the same as normal. However, the modified data chip should be used instead of a normal one to start the warping.",
